--- a/.github/workflows/agents-ci.yml
+++ b/.github/workflows/agents-ci.yml
@@ -23,13 +23,13 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4 # v4 (major tag)
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v5 # v5 (major tag)
         with:
           python-version: "3.11"
       - name: Cache uv
-        uses: actions/cache@v4
+        uses: actions/cache@v4 # v4 (major tag)
         with:
           path: |
             ~/.cache/uv
@@ -38,7 +38,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-uv-
       - name: Install uv
-        uses: astral-sh/setup-uv@0c5ec6682189e50e54f9b89e0ee1d3f3f94a639a # v3
+        uses: astral-sh/setup-uv@v3
       - name: Test template
         working-directory: templates/agent-kit
         run: |
