--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -1,4 +1,7 @@
-name: Docs link check
+name: linkcheck
+permissions:
+  contents: read
+
 on:
   push:
     branches: [ main ]
@@ -13,9 +16,6 @@ on:
       - docs/**
       - .lychee.toml
       - .github/workflows/linkcheck.yml
-permissions:
-  contents: read
-
 defaults:
   run:
     shell: bash --noprofile --norc -euo pipefail {0}
@@ -24,6 +24,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   lychee:
+    name: Link Check
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -42,5 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LYCHEE_CACHE_DIR: ~/.cache/lychee
         with:
-          args: --config .lychee.toml --statistics
+          args: --config .lychee.toml
+          lycheeVersion: '0.15.1'
           fail: true
